--- a/app/package.json
+++ b/app/package.json
@@ -28,5 +28,9 @@
     "react-plotly.js": "^2.6.0",
     "react-spring": "^9.7.1",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "eslint": "8.43.0",
+    "eslint-config-next": "13.4.7"
   }
 }
