--- a/expo/package.json
+++ b/expo/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-spring": "^9.7.1",
     "tailwindcss": "3.3.2"
   }
