--- a/expo/package.json
+++ b/expo/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@jadesrochers/geomap": "^0.4.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
+    "d3-geo": "^3.1.0",
     "next": "13.4.7",
     "postcss": "8.4.24",
+    "ramda": "^0.29.0",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
